src/main/k8s/04-Deployments-with-kubectl/manifests/anti-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-anti
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: web
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: web-container
          image: nginx
