src/main/k8s/04-Deployments-with-kubectl/manifests/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
spec:
  containers:
    - name: busybox-container
      image: busybox
      command: ["/bin/sh", "-c", "mkdir -p /mnt/data && echo Hello Kubernetes! && sleep 3600"]
      volumeMounts:
        - mountPath: "/mount/data"
          name: task-pv-storage
#      volumeMounts:
#        - mountPath: /data/redis
#          name: redis-storage


  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim
#  volumes:
#    - name: redis-storage
#      emptyDir: {}
