src/main/k8s/04-Deployments-with-kubectl/manifests/initcontainer-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app-pod
spec:
  containers:
    - name: web-app
      image: nginx:1.27.2-alpine  # 主容器运行 Web 应用的镜像
      ports:
        - containerPort: 80
