src/main/k8s/04-Deployments-with-kubectl/manifests/toleration-po.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
spec:
  containers:
    - name: busybox-container
      image: busybox
      command: ["/bin/sh", "-c", "echo Hello Kubernetes! && sleep 3600"]

  tolerations:
    - effect: NoExecute
      key: dedicated
      operator: Equal
      value: "critical"
