src/main/k8s/04-Deployments-with-kubectl/manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 90         # service 暴露的端口
      targetPort: 80   # 容器内的端口
      nodePort: 30000  # 可指定，也可让系统自动分配 The range of valid ports is 30000-32767
  type: NodePort       # 使用 NodePort 类型
